# diphtOscan

./: .gitignore  README.md  __main__.py  environment.yml  pyproject.toml
data/mlst/: pubmlst_diphtheria_seqdef_scheme_3.fas  pubmlst_diphtheria_seqdef_scheme_3.fas.ndb  pubmlst_diphtheria_seqdef_scheme_3.fas.nhr  pubmlst_diphtheria_seqdef_scheme_3.fas.nin  pubmlst_diphtheria_seqdef_scheme_3.fas.njs  pubmlst_diphtheria_seqdef_scheme_3.fas.not  pubmlst_diphtheria_seqdef_scheme_3.fas.nsq  pubmlst_diphtheria_seqdef_scheme_3.fas.nto  st_profiles.txt
data/mlst/sequences/: atpA.fas  dnaK.fas  fusA.fas  leuA.fas  odhA.fas  rpoB.fas
data/resistance/: download_sequence_prot.sh  tetA.fas  update_database_resistance.sh
data/resistance/2022-07-07/: AMR.LIB.h3i  AMRProt  AMRProt-mutation.tab  AMRProt.phr  AMRProt.pin  AMRProt.pot  (+23 more)
data/species/: ReferenceCorynebacterium.list  species_mash_sketches.msh
data/tox/: pubmlst_diphtheria_seqdef_scheme_4.fas  pubmlst_diphtheria_seqdef_scheme_4.fas.ndb  pubmlst_diphtheria_seqdef_scheme_4.fas.nhr  pubmlst_diphtheria_seqdef_scheme_4.fas.nin  pubmlst_diphtheria_seqdef_scheme_4.fas.njs  pubmlst_diphtheria_seqdef_scheme_4.fas.nsq  tox_profiles.txt
data/virulence/: predictionfactors.fas  seq.txt  table_virulencefactors_info.txt  tox.fas  viulencefactors.fas
diphtoscan/: cli.py  jolytree_generation.py  updating_database.py  utils.py
module/: biovar_detection.py  blastn.py  download_alleles_st.py  jolytree_generation.py  misc.py  mlstBLAST.py  species.py  template_iTOL.py  updating_database.py  utils.py
script/: update_tools.txt
(+227 files in other folders)
